# spherical-harmonics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
sh/: sh_api.cpp  sh_api.h  spherical_harmonics.h
